# bump-cli

./: README.md  pyproject.toml
.github/workflows/: pypi.yml
src/bumpy/: __init__.py
