[project]
name = "bumpy"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "luiarthur", email = "luiarthur@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "gitpython>=3.1.44",
    "semver>=3.0.2",
]

[project.scripts]
bumpy = "bumpy:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80
